test/Fail/Issue2489.err
Issue2489.agda:28.14-15: error: [InstanceNoCandidate]
No instance of type ⊤ was found in scope.
when checking that the expression search has type ⊤
